<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch!</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">613243062576965</string>
    <string name="fb_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb613243062576965</string>

    <!-- TWITTER PURPOSE -->
    <string name="twitter_consumer_key" translatable="false">CJX8uuSPhgPN518yDkNOagKvi</string>
    <string name="twitter_consumer_secret" translatable="false">3aS9ou6dMhlpUhwQj97nN5M3iAfSbwDA1fIg8fHZzsMh7j490W</string>

    <!-- Menu -->
    <string name="title_activity_main2" translatable="false">@string/app_name</string>
    <string name="title_map">Map View</string>
    <string name="title_list">List View</string>
    <string name="title_workers">Workmates</string>
    <string name="title_search">Search</string>

    <!-- Connection ACTIVITY -->
    <string name="error_not_connected">You must been connected !</string>
    <string name="error_authentication_canceled">Authentication canceled !</string>
    <string name="error_no_internet">No internet connexion!</string>
    <string name="error_unknown_error">An error occurred</string>
    <string name="connection_succeed">Authentication granted !</string>
    <string name="no_name_found">No name found</string>
    <string name="no_mail_found">No mail found</string>
    <string name="email">Email</string>
    <string name="google" translatable="false">Google</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="twitter" translatable="false">Twitter</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Detail activity -->
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="web_site">WEB SITE</string>
    <string name="favorite_restaurant_message">Restaurant added to your favorite list</string>
    <string name="dislike">Dislike</string>
    <string name="chosen_restaurant">You have chosen this restaurant</string>
    <string name="no_telephone_number_for_this_restaurant">No telephone number for this restaurant</string>
    <string name="no_website_for_restaurant">No website for this restaurant</string>

    <!-- restaurant favorite activity -->
    <string name="favorites_restaurant">My Favorites Restaurants</string>
    <string name="your_favorite_restaurants">Your favorite restaurants</string>
    <string name="restaurant_delete">Restaurant delete to your favorite list</string>
    <string name="you_haven_t_choice_restaurant">You haven\'t choose restaurant</string>

    <!-- workers -->
    <string name="no_choice_restaurant_workers">You don\'t have chosen a restaurant</string>
    <string name="is_eating_at">" is eating at \n"</string>
    <string name="hasn_t_decided">" hasn\'t decided yet"</string>
    <string name="is_joining">" is joining!"</string>

    <!-- restaurant list -->
    <string name="restaurant_image">restaurant Image</string>
    <string name="restaurant_open">Restaurant open</string>
    <string name="not_open_yet">Not open yet</string>

    <!-- Firebase query -->
    <string name="error_query">Error getting documents : %s</string>

    <!-- Stream -->
    <string name="error_stream">error : %s</string>
    <string name="on_Complete_message">On complete</string>

    <!-- Toolbar text -->
    <string name="I_m_hungry">I\'m hungry</string>
    <string name="workers_toolbar">Workers</string>

    <!-- map fragment -->
    <string name="permission_denied">Permission denied</string>
    <string name="my_position">My position</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Notifications</string>
    <string name="location">Location</string>
    <string name="choose_options">Choose your options</string>

    <!-- Sync Preferences -->
    <string name="enable_notification">Enable notifications</string>
    <string name="enable_location">Enable geolocation</string>
    <string name="define_map_zoom">Define map zoom</string>
    <string name="zoom_level">" zoom level"</string>
    <string name="define_your_radius_search">Define your radius restaurant search</string>
    <string name="meters_radius">" meters radius search restaurant"</string>
    <string name="notification_header">Notification</string>
    <string name="set_notification_rules">Set notifications configuration</string>
    <string name="map_settings">Map settings</string>
    <string name="define_map_settings">Define your own map settings</string>
    <string name="define_establishment">Define your establishment type search</string>
    <string name="define_favorite_map_radius">Define your favorite default map radius search</string>
    <string name="define_favorite_type">Define your favorite establishment type search</string>
    <string name="array_high">High</string>
    <string name="array_medium">Medium</string>
    <string name="array_less">Less</string>
    <string name="array_default">Default</string>
    <string name="array_radius_5000">Radius 5000 m</string>
    <string name="array_radius_3000">Radius 3000 m</string>
    <string name="array_radius_2000">Radius 2000 m</string>
    <string name="array_radius_1000">Radius 1000 m</string>
    <string name="array_radius_500">Radius 500 m</string>
    <string name="array_type_resto">restaurant</string>
    <string name="array_type_bar">bar</string>
    <string name="array_type_hotel">hotel</string>
    <string name="array_type_cafe">cafe</string>
    <string name="array_type_food">food</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">You have received a message</string>
    <string name="message_from_go4lunch">Message from Go4Lunch</string>
    <string name="app_logo" translatable="false">app logo</string>
    <string name="filter_restaurant_by">Filter restaurant by :</string>
    <string name="no_star">No star</string>
    <string name="_1">1 star</string>
    <string name="_2">2 stars</string>
    <string name="_3">3 stars</string>
    <string name="no_filter">No filter</string>
    <string name="no_worker_has_chosen_this_restaurant">No Worker has chosen this restaurant</string>
    <string name="no_restaurant_for_this_filter_selection">No restaurant for this filter selection</string>

</resources>
